# gazebo-moveit2-motion-planner

./: README.MD  README.md  docker-compose.yml  setup_x11_gpu.sh
docker/: ros2-moveit2.dockerfile
docs/: README.md  ikfast.md  octomap-perception.md  troubleshooting.md  wslg-gpu.md
interfaces/robot_interfaces/: CMakeLists.txt  package.xml
workspaces/moveit2_code/src/fanuc200ic5l_w_sg2_fanuc_arm_ikfast_plugin/: CMakeLists.txt  fanuc200ic5l_w_sg2_fanuc_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
workspaces/moveit2_code/src/fanuc200ic5l_w_sg2_fanuc_arm_ikfast_plugin/include/: ikfast.h
workspaces/moveit2_code/src/fanuc200ic5l_w_sg2_fanuc_arm_ikfast_plugin/src/: fanuc200ic5l_w_sg2_fanuc_arm_ikfast_moveit_plugin.cpp  ikfast_kinematics_parameters.yaml
workspaces/moveit2_code/src/fanuc_arm_config/: CMakeLists.txt  package.xml
workspaces/moveit2_code/src/fanuc_arm_config/config/: fanuc_arm_controller.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  lrmate200ic5l_with_sg2.ros2_control.xacro  lrmate200ic5l_with_sg2.srdf  lrmate200ic5l_with_sg2.urdf.xacro  moveit.rviz  moveit_controllers.yaml  moveit_octomap.rviz  octomap_server.yaml  ros2_controllers.yaml  sensors_3d.yaml
workspaces/moveit2_code/src/fanuc_arm_config/launch/: gazebo_moveit_integration.launch.py  gazebo_moveit_octomap.launch.py  moveit-rviz.launch.py
workspaces/moveit2_code/src/fanuc_arm_config/urdf/: fanuc200ic5l_w_sg2.urdf  fanuc200ic5l_w_sg2.xacro
workspaces/moveit2_code/src/fanuc_arm_config/urdf/meshes/collision/: sg2_collision.stl
workspaces/moveit2_code/src/fanuc_arm_config/urdf/meshes/visual/: sg2_reduced.stl
workspaces/moveit2_code/src/fanuc_arm_config/worlds/: basic_world.sdf  empty_no_gravity.sdf  octomap_demo_world.sdf
workspaces/moveit2_code/src/hello_moveit/: CMakeLists.txt  package.xml
workspaces/moveit2_code/src/hello_moveit/important_files/: fanuc200ic5l_w_sg2.dae  fanuc200ic5l_w_sg2.rounded.dae  ikfast61_fanuc_arm.cpp
workspaces/moveit2_code/src/hello_moveit/src/: hello_moveit.cpp
